--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,14 @@ bin-release/
 
 # Other files and folders
 .settings/
+.vscode
+eigen-3.4.0
 
 # Executables
 *.swf
 *.air
 *.ipa
 *.apk
-*.vscode
-*eigen-3.4.0
-
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
